# actix-todo

./: .dockerignore  .env  .env.github  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cache  README.md  compose.yml  database.sql  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: rust.yml
migrations/2020-02-28-014530_create_db/: down.sql  up.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  integration_tests.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: test.rs
